--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__label">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -51,7 +51,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
             <ul class="lista-menu">
@@ -81,9 +81,18 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="src/img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="src/img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="src/img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="src/img/Favoritos.svg" alt="Meus favoritos"
+                    class="container__imagem container__imagem-transparente">
+            </a>
+            <a href="#" class="container__link">
+                <img src="src/img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="src/img/Usuário.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu Perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -94,57 +103,60 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
         <!-- Slider main container -->
-        <div class="swiper">
+        <div class="carrossel__container">
+            <div class="swiper">
 
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="src/img/ApacheKafka.png"
-                        alt="Livro sobre Apache kafka e spring boot da alura books"></div>
-                <div class="swiper-slide"><img src="src/img/Liderança.png"
-                        alt="Livro sobre liderança em design da alura books"></div>
-                <div class="swiper-slide"><img src="src/img/Javascript.png" alt="Livro sobre Javascript"></div>
-                <div class="swiper-slide"><img src="src/img/Guia Front-end.png" alt="Livro guia Front-end"></div>
-                <div class="swiper-slide"><img src="src/img/Portugol.png" alt="Livro sobre portugol"></div>
-            </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-        </div>
-
-        <div class="card">
-            <!-- 1º linha -->
-            <div class="card__descricao">
-                <!-- 1º coluna-->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="src/img/ApacheKafka.png"
+                            alt="Livro sobre Apache kafka e spring boot da alura books"></div>
+                    <div class="swiper-slide"><img src="src/img/Liderança.png"
+                            alt="Livro sobre liderança em design da alura books"></div>
+                    <div class="swiper-slide"><img src="src/img/Javascript.png" alt="Livro sobre Javascript"></div>
+                    <div class="swiper-slide"><img src="src/img/Guia Front-end.png" alt="Livro guia Front-end"></div>
+                    <div class="swiper-slide"><img src="src/img/Portugol.png" alt="Livro sobre portugol"></div>
                 </div>
-                <!-- 2º coluna -->
-                <img src="src/img/Angular.png" alt="">
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
             </div>
 
-            <!-- 2º linha -->
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="src/img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="src/img/Compras.svg" alt="Adicionar ao carrinho"></li>
-                </ul>
-                <a class="botoes__ancora" href="#">Saiba mais</a>
-                <!-- 2º coluna -->
+            <div class="card">
+                <!-- 1º linha -->
+                <div class="card__descricao">
+                    <!-- 1º coluna-->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <!-- 2º coluna -->
+                    <img src="src/img/Angular.png" alt="">
+                </div>
 
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="src/img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="src/img/Compras.svg" alt="Adicionar ao carrinho"></li>
+                    </ul>
+                    <a class="botoes__ancora" href="#">Saiba mais</a>
+                    <!-- 2º coluna -->
+
+                </div>
             </div>
         </div>
     </section>
 
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
+        <div class="carrossel__container carrossel__container-reverso">
         <!-- Slider main container -->
         <div class="swiper">
 
@@ -195,6 +207,7 @@
 
             </div>
         </div>
+    </div>
     </section>
     <section class="topicos">
         <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
@@ -234,16 +247,67 @@
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
 
-    <hr/>
+    <hr />
 
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
         <ul class="lista-rodape">
             <li class="lista-rodape__titulo">Educação</li>
-            <li class="lista-rodape__item"><img src="src/img/CasaDoCodigo.png" alt="Logo da casa do código"></li>
-            <a href="#" class="lista-rodape__link">Casa do Código</a>
-            <li class="lista-rodape__item"><img src="src/img/Caelum.png" alt="Logo da Caelum"></li>
-            <a href="#" class="lista-rodape__link">Caelum</a>
+            <li class="lista-rodape__item"><img src="src/img/CasaDoCodigo.png" alt="Logo da casa do código">
+                <a href="#" class="lista-rodape__link">Casa do Código</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/Caelum.png" alt="Logo da Caelum">
+                <a href="#" class="lista-rodape__link">Caelum</a>
+            </li>
+        </ul>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação Online</li>
+            <li class="lista-rodape__item"><img src="src/img/Alura.png" alt="Logo da Alura">
+                <a href="#" class="lista-rodape__link">Alura</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/AluraEmpresas.png" alt="Logo da Alura para Empresas">
+                <a href="#" class="lista-rodape__link">Alura Para Empresas</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/AluraLatam.png" alt="Logo da Alura Latam">
+                <a href="#" class="lista-rodape__link">Alura Latam</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/AluraStart.png" alt="Logo da Alura Start">
+                <a href="#" class="lista-rodape__link">Alura Start</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/MusicDot.png" alt="Logo da MusicDot">
+                <a href="#" class="lista-rodape__link">MusicDot</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/AluraLingua.png" alt="Logo da Alura Língua">
+                <a href="#" class="lista-rodape__link">Alura Língua</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/PM3.png" alt="Logo da PM3">
+                <a href="#" class="lista-rodape__link">PM3</a>
+            </li>
+        </ul>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item"><img src="src/img/HipstersTech.png" alt="Logo da Hipsters ponto Tech">
+                <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/Scuba.png" alt="Logo da Scuba Dev">
+                <a href="#" class="lista-rodape__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/Layers.png" alt="Logo da Layers ponto Tech">
+                <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/LikeABoss.png" alt="Logo da Like a Boss">
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/CarreiraSemFronteira.png"
+                    alt="Logo da Carreira sem fronteira">
+                <a href="#" class="lista-rodape__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/HipstersJobs.png" alt="Logo da Hipsters ponto Jobs">
+                <a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista-rodape__item"><img src="src/img/GUJ.png" alt="Logo da GUJ">
+                <a href="#" class="lista-rodape__link">GUJ</a>
+            </li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
